se agrego el ejercicio 4 del tp 5

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             </div>
           </nav>
     </header>
-    <main>
-
+    <main class="container text-center my-5">
+        <h3 class="py-3" id="fecha"></h3>
+        <h1 id="horaMinSeg"></h1>
     </main>
     <footer class="bg-dark text-light py-4 text-center">
         <p>&copy; Todos los derechos reservados</p>
