--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Ejercicio 4 TP5</title>
-</head>
-<body>
+  </head>
+  <body class="fondoAzul">
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand text-light" href="./index.html">Ejercicio 4</a>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="./index.html">Ejercicio 4</a>
+        </div>
+      </nav>
     </header>
-    <main class="container text-center my-5">
-        <h3 class="py-3" id="fecha"></h3>
-        <h1 id="horaMinSeg"></h1>
+    <main class="container">
+      <div class="text-white w-50 my-5">
+        <h3 class="py-3 bg-dark px-4" id="fecha"></h3>
+        <div class="d-flex horaMinSegAmPm bg-dark px-4">
+          <h1 class="tamanioLetraHora" id="horaMinutos"></h1>
+          <div class="segAmPm mt-3 ms-4 text-center">
+            <h6 class="tamanioLetraSegAmPm mb-0" id="ampm"></h6>
+            <h6 class="tamanioLetraSegAmPm mb-0" id="segundos"></h6>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="bg-dark text-light py-4 text-center">
-        <p>&copy; Todos los derechos reservados</p>
+      <p>&copy; Todos los derechos reservados</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
